data/derived/comb/progs/unify/prog2383.ml.out
Characters 200-201:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type 'a * 'b -> 'c -> 'a
       but an expression was expected of type 'a * 'b -> 'c -> 'a * 'b
       The type variable 'a occurs inside 'a * 'b
